--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^10.2.3",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
