--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "internship-task-server",
   "version": "1.0.0",
   "main": "index.js",
-  "engines": {
-    "node": ">=14.0.0"
-  },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start-dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
